force-app/main/default/objects/FS_Installation__c/FS_Installation__c.object-meta.xml
<CustomObject>
    <description>Installation</description>
    <label>Installation</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Installation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>