force-app/main/default/objects/FS_Installation__c/fields/Admin_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_User_Name__c</fullName>
    <label>Admin User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>