force-app/main/default/objects/FS_Installation__c/fields/Blank_Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Blank_Overall_Status__c</fullName>
    <label>Blank Overall Status?</label>
    <length>15</length>
    <type>Text</type>
</CustomField>