force-app/main/default/objects/FS_Installation__c/fields/Blended_ACN__c.field-meta.xml
<CustomField>
    <fullName>Blended_ACN__c</fullName>
    <formula>IF( RecordType.Name=$Label.IP_Relocation_I4W_Rec_Type,  FS_New_Outlet_ACN__c , Outlet_ACN__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended ACN</label>
    <type>Text</type>
</CustomField>