force-app/main/default/objects/FS_Installation__c/fields/Blended_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Blended_Customer_Address__c</fullName>
    <formula>IF( RecordType.Name=$Label.IP_Relocation_I4W_Rec_Type,  FS_New_Outlet__r.CCR_Address__c  ,  FS_Outlet__r.CCR_Address__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Customer Address</label>
    <type>Text</type>
</CustomField>