force-app/main/default/objects/FS_Installation__c/fields/Blended_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Blended_Customer_Name__c</fullName>
    <formula>IF( RecordType.Name=$Label.IP_Relocation_I4W_Rec_Type,  FS_New_Outlet__r.Name  ,  FS_Outlet__r.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Customer Name</label>
    <type>Text</type>
</CustomField>