force-app/main/default/objects/FS_Installation__c/fields/Blended_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Blended_Install_Date__c</fullName>
    <formula>FS_Scheduled_Install_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Install Date</label>
    <type>Date</type>
</CustomField>