force-app/main/default/objects/FS_Installation__c/fields/Blended_Installation_status__c.field-meta.xml
<CustomField>
    <fullName>Blended_Installation_status__c</fullName>
    <formula>Overall_Status2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Installation status</label>
    <type>Text</type>
</CustomField>