force-app/main/default/objects/FS_Installation__c/fields/Blended_Type_of_Dispenser_Platform__c.field-meta.xml
<CustomField>
    <fullName>Blended_Type_of_Dispenser_Platform__c</fullName>
    <formula>IF( RecordType.Name=$Label.IP_Relocation_I4W_Rec_Type, 

SUBSTITUTE(TRIM(

IF( INCLUDES(Type_of_Dispenser_Platform__c ,&quot;7000&quot;), &quot;7000 &quot;, &quot;&quot;)+

IF( INCLUDES(Type_of_Dispenser_Platform__c ,&quot;8000&quot;), &quot;8000 &quot;, &quot;&quot;)+

IF( INCLUDES(Type_of_Dispenser_Platform__c ,&quot;9000&quot;), &quot;9000 &quot;, &quot;&quot;)+

IF( INCLUDES(Type_of_Dispenser_Platform__c, &quot;9100&quot;),&quot;9100&quot;, &quot;&quot;)),&quot; &quot;,&quot;; &quot;), RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Type of Dispenser Platform</label>
    <type>Text</type>
</CustomField>