force-app/main/default/objects/FS_Installation__c/fields/Cartridge_Fee_Payment_Method1__c.field-meta.xml
<CustomField>
    <fullName>Cartridge_Fee_Payment_Method1__c</fullName>
    <formula>TEXT(FS_Outlet__r.Cokesmart_Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cartridge Fee Payment Method</label>
    <type>Text</type>
</CustomField>