force-app/main/default/objects/FS_Installation__c/fields/Cokesmart_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Cokesmart_Payment_Method__c</fullName>
    <description>Cartridge Fee Payment Method picklist</description>
    <inlineHelpText>Ã¢â‚¬Å“&quot;Payment Term&quot; Invoicing requires Finance Approval from S. Curtis Marshall &amp; Mark Westenfelder.

Warning: When Payment Term eligibility is changed from Ã¢â‚¬Å“YesÃ¢â‚¬ï¿½ to Ã¢â‚¬Å“NoÃ¢â‚¬ï¿½, existing Ã¢â‚¬Å“Payment TermÃ¢â‚¬ï¿½ methods will need to be updated.Ã¢â‚¬ï¿½</inlineHelpText>
    <label>Cartridge Fee Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
                <default>true</default>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>Bank Draft</fullName>
            </value>
            <value>
                <fullName>Invoice (Payment Terms)</fullName>
            </value>
            <value>
                <fullName>Distributor billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>