force-app/main/default/objects/FS_Installation__c/fields/Difference_Days__c.field-meta.xml
<CustomField>
    <fullName>Difference_Days__c</fullName>
    <formula>DATEVALUE(FS_Outlet__r.FS_Customer_Registered_Date__c) - FS_Scheduled_Install_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>