force-app/main/default/objects/FS_Installation__c/fields/Distribution_Center__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center__c</fullName>
    <formula>FS_Outlet__r.FS_Distributor__r.Name &amp; br()
&amp; FS_Outlet__r.FS_Distributor__r.ShippingStreet &amp; br()
&amp; FS_Outlet__r.FS_Distributor__r.ShippingCity &amp; &quot;, &quot; &amp; FS_Outlet__r.FS_Distributor__r.ShippingState  &amp;&quot; &quot;&amp;FS_Outlet__r.FS_Distributor__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Center</label>
    <type>Text</type>
</CustomField>