force-app/main/default/objects/FS_Installation__c/fields/Freestyle_Support_Tool_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Freestyle_Support_Tool_Case_Status__c</fullName>
    <label>&#39;Freestyle Support Tool&#39; Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>