force-app/main/default/objects/FS_Installation__c/fields/FS_7000_Cabinet_Stand__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Cabinet_Stand__c</fullName>
    <label>7000 Cabinet Stand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46449-Series 7000 Cabinet Stand Ã¢â‚¬â€œ MUST ENTER SALES ORDER (US Doc) Ã¢â‚¬â€œ Account Team Pay</fullName>
            </value>
            <value>
                <fullName>46449-Series 7000 Cabinet Stand Ã¢â‚¬â€œ MUST ENTER SALES ORDER (US Doc) Ã¢â‚¬â€œ Customer Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>