force-app/main/default/objects/FS_Installation__c/fields/FS_7000_IM_Adapter_Kit__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_IM_Adapter_Kit__c</fullName>
    <description>7000 IM Adapter/Kit Value</description>
    <label>7000 IM Adapter/Kit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46412: Ice Maker Adapter Kit</fullName>
            </value>
            <value>
                <fullName>46413: Lid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>