force-app/main/default/objects/FS_Installation__c/fields/FS_7000_IM_Adapter_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_IM_Adapter_QTY__c</fullName>
    <label>7000 IM Adapter QTY</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>