force-app/main/default/objects/FS_Installation__c/fields/FS_7000_Misc_Kits__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Misc_Kits__c</fullName>
    <label>7000 Misc Kits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XXXXX: Barqs/Dr. Pepper label kit</fullName>
            </value>
            <value>
                <fullName>XXXXX: Barqs/Pibb label kit</fullName>
            </value>
            <value>
                <fullName>XXXXX: Soft Ice Kit</fullName>
            </value>
            <value>
                <fullName>XXXXX: Tall Cup Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>