force-app/main/default/objects/FS_Installation__c/fields/FS_7000_Series_Brands_Option_Selections__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Brands_Option_Selections__c</fullName>
    <label>7000 Series Brand Option Selections</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 Static/1 Agitated</fullName>
            </value>
            <value>
                <fullName>0 Static/2 Agitated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>