force-app/main/default/objects/FS_Installation__c/fields/FS_7000_Series_Market_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Market_Activation_Date__c</fullName>
    <label>Market Activation Date</label>
    <type>Date</type>
</CustomField>