force-app/main/default/objects/FS_Installation__c/fields/FS_Activation_Lead__c.field-meta.xml
<CustomField>
    <fullName>FS_Activation_Lead__c</fullName>
    <formula>FS_Outlet__r.FS_Outlet_Activation_Lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Lead</label>
    <type>Text</type>
</CustomField>