force-app/main/default/objects/FS_Installation__c/fields/FS_Admin_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Admin_User_Phone__c</fullName>
    <label>Admin User Phone</label>
    <type>Phone</type>
</CustomField>