force-app/main/default/objects/FS_Installation__c/fields/FS_Admin_User_Title__c.field-meta.xml
<CustomField>
    <fullName>FS_Admin_User_Title__c</fullName>
    <label>Admin User Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>