force-app/main/default/objects/FS_Installation__c/fields/FS_AMOA_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_AMOA_Completed_Date_Time__c</fullName>
    <label>AMOA Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>