force-app/main/default/objects/FS_Installation__c/fields/FS_Ancillary_equipment_needed__c.field-meta.xml
<CustomField>
    <fullName>FS_Ancillary_equipment_needed__c</fullName>
    <label>Ancillary equipment needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>