force-app/main/default/objects/FS_Installation__c/fields/FS_Ancillary_part_to_be_removed__c.field-meta.xml
<CustomField>
    <fullName>FS_Ancillary_part_to_be_removed__c</fullName>
    <label>Ancillary Part to Be Removed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>