force-app/main/default/objects/FS_Installation__c/fields/FS_Approval_request_submitted_by__c.field-meta.xml
<CustomField>
    <fullName>FS_Approval_request_submitted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EP Approval request submitted by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations6</relationshipName>
    <type>Lookup</type>
</CustomField>