force-app/main/default/objects/FS_Installation__c/fields/FS_Approval_request_submitted_date_time__c.field-meta.xml
<CustomField>
    <fullName>FS_Approval_request_submitted_date_time__c</fullName>
    <label>EP Approval request submitted date time</label>
    <type>DateTime</type>
</CustomField>