force-app/main/default/objects/FS_Installation__c/fields/FS_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>FS_Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EP Approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations7</relationshipName>
    <type>Lookup</type>
</CustomField>