force-app/main/default/objects/FS_Installation__c/fields/FS_Approved_by_date_time__c.field-meta.xml
<CustomField>
    <fullName>FS_Approved_by_date_time__c</fullName>
    <label>EP Approved by date time</label>
    <type>DateTime</type>
</CustomField>