force-app/main/default/objects/FS_Installation__c/fields/FS_Asset_Tracking_Form_AMOA_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Asset_Tracking_Form_AMOA_Status__c</fullName>
    <inlineHelpText>You can select the &#39;Submitted&#39; option only after you have attached the AMOA form</inlineHelpText>
    <label>Asset Tracking Form (AMOA) Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Removal Done - AMOA Pending</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>