force-app/main/default/objects/FS_Installation__c/fields/FS_BAST_Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>FS_BAST_Action_Needed__c</fullName>
    <formula>IF( OR( TEXT(FS_Spicy_Cherry__c) = &#39;Dr Pepper Only&#39;, 
        TEXT(FS_Spicy_Cherry__c) = &#39;Dr Pepper/Diet Dr Pepper&#39;,
        TEXT(FS_Hide_Dasani__c)   = &#39;Hide&#39;  ,
        FS_Other_Special_Requests__c &lt;&gt;&quot;&quot;)
  ,true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAST Action Needed</label>
    <type>Checkbox</type>
</CustomField>