force-app/main/default/objects/FS_Installation__c/fields/FS_Beverage_configuration_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Beverage_configuration_Code__c</fullName>
    <formula>IF(ISPICKVAL(FS_Spicy_Cherry__c, &quot;Pibb/Pibb Zero&quot;), &quot;C37&quot;, Null) + 
IF(ISPICKVAL(FS_Spicy_Cherry__c, &quot;Dr Pepper/Diet Dr Pepper&quot;), &quot;C38&quot;, Null)+
IF(ISPICKVAL(FS_Spicy_Cherry__c, &quot;Pibb/Pibb Zero/Add FUZE/Remove Dasani&quot;), &quot;C37,C76&quot;, Null)+ 
IF(ISPICKVAL(FS_Spicy_Cherry__c, &quot;Pibb/Pibb Zero/Add FUZE/Remove Powerade&quot;), &quot;C37,C76&quot;, Null)+ 
IF(ISPICKVAL(FS_Spicy_Cherry__c, &quot;Pibb/Pibb Zero/Add FUZE/Remove Vitaminwater&quot;), &quot;C37,C76&quot;, Null)+ 
IF(ISPICKVAL(FS_Spicy_Cherry__c, &quot;Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Dasani&quot;), &quot;C38,C76&quot;, Null)+ IF(ISPICKVAL(FS_Spicy_Cherry__c, &quot;Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Powerade&quot;), &quot;C38,C76&quot;, Null)+ IF(ISPICKVAL(FS_Spicy_Cherry__c, &quot;Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Vitaminwater&quot;), &quot;C38,C76&quot;, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spicy Cherry Brand Codes</label>
    <type>Text</type>
</CustomField>