force-app/main/default/objects/FS_Installation__c/fields/FS_Bill_To_Address_same_as_Ship_to_Addrs__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_To_Address_same_as_Ship_to_Addrs__c</fullName>
    <label>Bill-To Address same as Ship-to-Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>