force-app/main/default/objects/FS_Installation__c/fields/FS_Bill_To_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_To_City__c</fullName>
    <label>Bill To City</label>
    <length>70</length>
    <type>Text</type>
</CustomField>