force-app/main/default/objects/FS_Installation__c/fields/FS_Bill_To_Country__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_To_Country__c</fullName>
    <label>Bill To Country</label>
    <length>64</length>
    <type>Text</type>
</CustomField>