force-app/main/default/objects/FS_Installation__c/fields/FS_Bill_To_Zip__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_To_Zip__c</fullName>
    <label>Bill To Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>