force-app/main/default/objects/FS_Installation__c/fields/FS_Booster_Shelf__c.field-meta.xml
<CustomField>
    <fullName>FS_Booster_Shelf__c</fullName>
    <label>Booster Shelf</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>43537 : Booster Shelf 4.4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>