force-app/main/default/objects/FS_Installation__c/fields/FS_Brandset_8k__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset_8k__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brandset 8000</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>FS_Brandset__c.FS_Platform_Applicable__c</field>
            <operation>contains</operation>
            <value>8000</value>
        </filterItems>
        <filterItems>
            <field>FS_Brandset__c.Available_for_Selection__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Brandset__c</referenceTo>
    <relationshipLabel>Installations (Brandset)</relationshipLabel>
    <relationshipName>Installations2</relationshipName>
    <type>Lookup</type>
</CustomField>