force-app/main/default/objects/FS_Installation__c/fields/FS_Brandset_9k__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset_9k__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the 9k platform brandset only for installation of 8000 &amp; 9000 series. for other record types this is not using</description>
    <label>Brandset 9000</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>FS_Brandset__c.FS_Platform_Applicable__c</field>
            <operation>contains</operation>
            <value>9000</value>
        </filterItems>
        <filterItems>
            <field>FS_Brandset__c.Available_for_Selection__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Brandset__c</referenceTo>
    <relationshipLabel>Installations (Brandset 9k)</relationshipLabel>
    <relationshipName>Installations1</relationshipName>
    <type>Lookup</type>
</CustomField>