force-app/main/default/objects/FS_Installation__c/fields/FS_BrandStatus__c.field-meta.xml
<CustomField>
    <fullName>FS_BrandStatus__c</fullName>
    <description>Brand Status</description>
    <label>Brand Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>