force-app/main/default/objects/FS_Installation__c/fields/FS_Bypass__c.field-meta.xml
<CustomField>
    <fullName>FS_Bypass__c</fullName>
    <formula>FS_Execution_Plan__r.FS_Bypass_functions_Company_Locations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bypass</label>
    <type>Checkbox</type>
</CustomField>