force-app/main/default/objects/FS_Installation__c/fields/FS_Cabinet_Stand_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_Cabinet_Stand_QTY__c</fullName>
    <label>Cabinet Stand QTY</label>
    <type>TextArea</type>
</CustomField>