force-app/main/default/objects/FS_Installation__c/fields/FS_Calculated_Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>FS_Calculated_Customer_Classification__c</fullName>
    <formula>FS_Outlet__r.Calculated_Customer_Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Customer Classification</label>
    <type>Text</type>
</CustomField>