force-app/main/default/objects/FS_Installation__c/fields/FS_Calculated_SA_Completion_By_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Calculated_SA_Completion_By_Date__c</fullName>
    <formula>FS_Execution_Plan__r.FS_Execution_Start_Date__c +  CASE(DAY(FS_Execution_Plan__r.FS_Execution_Start_Date__c), 2, 14, 2, 14,3,14,4,14,5,14,6,14,7,16,15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Completion By Date</label>
    <type>Date</type>
</CustomField>