force-app/main/default/objects/FS_Installation__c/fields/FS_Cancelled_oH__c.field-meta.xml
<CustomField>
    <fullName>FS_Cancelled_oH__c</fullName>
    <description>Cancelled/On Hold?</description>
    <label>Cancelled/On Hold?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>