force-app/main/default/objects/FS_Installation__c/fields/FS_Cartridge_HFCS_Rack__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_HFCS_Rack__c</fullName>
    <label>Cartridge/HFCS Rack</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46079: Cartridge/HFCS Backroom Rack</fullName>
            </value>
            <value>
                <fullName>46246: Freestyle 41Ã¢â‚¬ï¿½ Rack with 2 Flat Pans</fullName>
            </value>
            <value>
                <fullName>46280 : 41Ã¢â‚¬ï¿½ Manitowoc Ã‚Â (Wendy&#39;s Only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>