force-app/main/default/objects/FS_Installation__c/fields/FS_Cartridge_Order_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Order_Method__c</fullName>
    <label>Cartridge Order Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cokesmart</fullName>
            </value>
            <value>
                <fullName>Bottler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>