force-app/main/default/objects/FS_Installation__c/fields/FS_Cartridge_Rack_Booster__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Rack_Booster__c</fullName>
    <label>Cartridge Rack/Booster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46111 : 38&quot; Rack with Cartridge Storage and 20gal Booster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>